[gd_scene load_steps=36 format=2]

[ext_resource path="res://taskinput.gd" type="Script" id=1]
[ext_resource path="res://tasktimer.gd" type="Script" id=2]
[ext_resource path="res://main.gd" type="Script" id=3]
[ext_resource path="res://breaktimer.gd" type="Script" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://font/GlacialIndifference-Bold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = SubResource( 1 )

[sub_resource type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.176471, 0.188235, 0.278431, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.223529, 0.235294, 0.32549, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.176471, 0.188235, 0.278431, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.176471, 0.188235, 0.278431, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="DynamicFont" id=8]
size = 60
extra_spacing_top = -20
font_data = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.176471, 0.188235, 0.278431, 1 )
corner_radius_top_right = 25
corner_radius_bottom_right = 25
expand_margin_left = 21.0

[sub_resource type="DynamicFont" id=12]
size = 25
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=14]
font_path = "res://font/GlacialIndifference-Bold.ttf"

[sub_resource type="DynamicFont" id=15]
size = 50
font_data = SubResource( 14 )

[sub_resource type="DynamicFont" id=19]
size = 50
font_data = SubResource( 14 )

[sub_resource type="DynamicFont" id=20]
size = 50
font_data = SubResource( 14 )

[sub_resource type="StyleBoxLine" id=23]
color = Color( 0.176471, 0.188235, 0.278431, 1 )
grow_begin = 0.0
grow_end = 0.0
thickness = 0
vertical = true

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.176471, 0.188235, 0.278431, 1 )
corner_radius_top_right = 25
corner_radius_bottom_right = 25
expand_margin_left = 35.0
expand_margin_top = 18.0
expand_margin_bottom = 18.0

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.176471, 0.188235, 0.278431, 1 )
corner_radius_top_right = 25
corner_radius_bottom_right = 25
expand_margin_left = 35.0
expand_margin_top = 18.0
expand_margin_bottom = 18.0

[sub_resource type="StyleBoxLine" id=24]
color = Color( 0.176471, 0.188235, 0.278431, 1 )
grow_begin = 0.0
grow_end = 0.0
thickness = 0
vertical = true

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.176471, 0.188235, 0.278431, 1 )
corner_radius_top_right = 25
corner_radius_bottom_right = 25
expand_margin_left = 35.0
expand_margin_top = 18.0
expand_margin_bottom = 18.0

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.176471, 0.188235, 0.278431, 1 )
corner_radius_top_right = 25
corner_radius_bottom_right = 25
expand_margin_left = 35.0
expand_margin_top = 18.0
expand_margin_bottom = 18.0

[sub_resource type="DynamicFontData" id=27]
font_path = "res://font/GlacialIndifference-Bold.ttf"

[sub_resource type="DynamicFont" id=28]
size = 25
font_data = SubResource( 27 )

[sub_resource type="DynamicFont" id=29]
size = 25
font_data = SubResource( 27 )

[sub_resource type="DynamicFont" id=30]
size = 120
font_data = SubResource( 14 )

[sub_resource type="DynamicFont" id=31]
size = 35
font_data = SubResource( 14 )

[sub_resource type="Theme" id=32]

[sub_resource type="StyleBoxFlat" id=33]
bg_color = Color( 0.176471, 0.188235, 0.278431, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=34]
bg_color = Color( 0.262745, 0.27451, 0.360784, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=35]
bg_color = Color( 0.176471, 0.188235, 0.278431, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=36]
bg_color = Color( 0.176471, 0.188235, 0.278431, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="DynamicFont" id=37]
size = 60
extra_spacing_top = -2
font_data = SubResource( 1 )

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 432.0
margin_bottom = 768.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="indicator" type="ColorRect" parent="."]
margin_right = 432.0
margin_bottom = 90.0
color = Color( 0.937255, 0.482353, 0.423529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="."]
margin_left = 11.0118
margin_top = 16.8416
margin_right = 335.012
margin_bottom = 111.842
custom_fonts/font = SubResource( 2 )
text = "pomrood"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="taskinput" type="Control" parent="."]
margin_right = 432.0
margin_bottom = 768.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="go" type="Button" parent="taskinput"]
anchor_left = 0.33
anchor_top = 0.75
anchor_right = 0.66
anchor_bottom = 0.75
margin_bottom = 70.0
focus_mode = 0
size_flags_vertical = 4
theme = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
custom_fonts/font = SubResource( 8 )
text = "go"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="taskname" type="LineEdit" parent="taskinput"]
anchor_left = 0.05
anchor_top = 0.25
anchor_right = 0.9
anchor_bottom = 0.3
size_flags_vertical = 4
custom_styles/normal = SubResource( 13 )
custom_fonts/font = SubResource( 12 )
align = 3
max_length = 128
placeholder_text = "task name"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="task" type="Label" parent="taskinput"]
anchor_left = 0.05
anchor_top = 0.18
anchor_right = 0.1
anchor_bottom = 0.2
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 0.176471, 0.188235, 0.278431, 1 )
text = "workin on:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="task2" type="Label" parent="taskinput"]
anchor_left = 0.05
anchor_top = 0.36
anchor_right = 0.1
anchor_bottom = 0.36
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 19 )
custom_colors/font_color = Color( 0.176471, 0.188235, 0.278431, 1 )
text = "work time"

[node name="task3" type="Label" parent="taskinput"]
anchor_left = 0.05
anchor_top = 0.54
anchor_right = 0.1
anchor_bottom = 0.54
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 20 )
custom_colors/font_color = Color( 0.176471, 0.188235, 0.278431, 1 )
text = "break time"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wtime" type="HSlider" parent="taskinput"]
anchor_left = 0.08
anchor_top = 0.44
anchor_right = 0.9
anchor_bottom = 0.44
margin_right = 2.80002
margin_bottom = 20.0
size_flags_vertical = 4
custom_styles/slider = SubResource( 23 )
custom_styles/grabber_area_highlight = SubResource( 21 )
custom_styles/grabber_area = SubResource( 22 )
min_value = 5.0
max_value = 60.0
step = 5.0
value = 5.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="btime" type="HSlider" parent="taskinput"]
anchor_left = 0.08
anchor_top = 0.62
anchor_right = 0.9
anchor_bottom = 0.62
margin_right = 2.80002
margin_bottom = 20.0
size_flags_vertical = 4
custom_styles/slider = SubResource( 24 )
custom_styles/grabber_area_highlight = SubResource( 25 )
custom_styles/grabber_area = SubResource( 26 )
min_value = 5.0
max_value = 60.0
step = 5.0
value = 5.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="wtimeLabel" type="Label" parent="taskinput"]
anchor_left = 0.05
anchor_top = 0.435
anchor_right = 0.1
anchor_bottom = 0.45
margin_left = 1.49831
margin_right = 1.49831
margin_bottom = 19.48
custom_fonts/font = SubResource( 28 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "5"

[node name="btimeLabel" type="Label" parent="taskinput"]
anchor_left = 0.05
anchor_top = 0.615
anchor_right = 0.1
anchor_bottom = 0.62
margin_left = 1.49831
margin_right = 1.49831
margin_bottom = 19.48
custom_fonts/font = SubResource( 29 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "5"

[node name="tasktimer" type="Control" parent="."]
visible = false
margin_right = 432.0
margin_bottom = 768.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timerlabel" type="Label" parent="tasktimer"]
anchor_top = 0.2
anchor_bottom = 0.2
margin_top = 0.399994
margin_right = 432.0
margin_bottom = 95.4
custom_fonts/font = SubResource( 30 )
custom_colors/font_color = Color( 0.176471, 0.188235, 0.278431, 1 )
text = "25:00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="taskname" type="Label" parent="tasktimer"]
anchor_left = 0.05
anchor_top = 0.4
anchor_right = 0.275
anchor_bottom = 0.4
margin_left = 0.4
margin_top = -0.200012
margin_right = 287.8
margin_bottom = 104.8
custom_fonts/font = SubResource( 31 )
custom_colors/font_color = Color( 0.176471, 0.188235, 0.278431, 1 )
text = "task name"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timer" type="Timer" parent="tasktimer"]

[node name="extend5" type="Button" parent="tasktimer"]
anchor_left = 0.1
anchor_top = 0.75
anchor_right = 0.63
anchor_bottom = 0.75
margin_left = 0.439987
margin_right = 115.88
margin_bottom = 70.0
size_flags_vertical = 4
theme = SubResource( 32 )
custom_styles/hover = SubResource( 33 )
custom_styles/pressed = SubResource( 34 )
custom_styles/focus = SubResource( 35 )
custom_styles/normal = SubResource( 36 )
custom_fonts/font = SubResource( 37 )
text = "add 5 min"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="end" type="Button" parent="tasktimer"]
anchor_left = 0.1
anchor_top = 0.86
anchor_right = 0.63
anchor_bottom = 0.86
margin_left = 0.439987
margin_right = 115.88
margin_bottom = 70.0
size_flags_vertical = 4
theme = SubResource( 32 )
custom_styles/hover = SubResource( 33 )
custom_styles/pressed = SubResource( 34 )
custom_styles/focus = SubResource( 35 )
custom_styles/normal = SubResource( 36 )
custom_fonts/font = SubResource( 37 )
text = "end early"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="breaktimer" type="Control" parent="."]
visible = false
margin_right = 432.0
margin_bottom = 768.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timerlabelb" type="Label" parent="breaktimer"]
anchor_top = 0.2
anchor_bottom = 0.2
margin_top = 0.399994
margin_right = 432.0
margin_bottom = 95.4
custom_fonts/font = SubResource( 30 )
custom_colors/font_color = Color( 0.176471, 0.188235, 0.278431, 1 )
text = "25:00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tasknameb" type="Label" parent="breaktimer"]
anchor_left = 0.05
anchor_top = 0.4
anchor_right = 0.275
anchor_bottom = 0.4
margin_left = 0.4
margin_top = -0.200012
margin_right = 287.8
margin_bottom = 104.8
custom_fonts/font = SubResource( 31 )
custom_colors/font_color = Color( 0.176471, 0.188235, 0.278431, 1 )
text = "break time
empty head"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timerb" type="Timer" parent="breaktimer"]

[node name="extend5b" type="Button" parent="breaktimer"]
anchor_left = 0.1
anchor_top = 0.75
anchor_right = 0.63
anchor_bottom = 0.75
margin_left = 0.439987
margin_right = 115.88
margin_bottom = 70.0
size_flags_vertical = 4
theme = SubResource( 32 )
custom_styles/hover = SubResource( 33 )
custom_styles/pressed = SubResource( 34 )
custom_styles/focus = SubResource( 35 )
custom_styles/normal = SubResource( 36 )
custom_fonts/font = SubResource( 37 )
text = "add 5 min"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="endb" type="Button" parent="breaktimer"]
anchor_left = 0.1
anchor_top = 0.86
anchor_right = 0.63
anchor_bottom = 0.86
margin_left = 0.439987
margin_right = 115.88
margin_bottom = 70.0
size_flags_vertical = 4
theme = SubResource( 32 )
custom_styles/hover = SubResource( 33 )
custom_styles/pressed = SubResource( 34 )
custom_styles/focus = SubResource( 35 )
custom_styles/normal = SubResource( 36 )
custom_fonts/font = SubResource( 37 )
text = "end early"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
[connection signal="btime" from="taskinput" to="breaktimer" method="_on_taskinput_btime"]
[connection signal="taskname" from="taskinput" to="." method="_on_taskinput_taskname"]
[connection signal="taskname" from="taskinput" to="tasktimer" method="_on_taskinput_taskname"]
[connection signal="wtime" from="taskinput" to="tasktimer" method="_on_taskinput_wtime"]
[connection signal="pressed" from="taskinput/go" to="taskinput" method="_on_go_pressed"]
[connection signal="value_changed" from="taskinput/wtime" to="taskinput" method="_on_wtime_value_changed"]
[connection signal="value_changed" from="taskinput/btime" to="taskinput" method="_on_btime_value_changed"]
[connection signal="timeout" from="tasktimer/timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="tasktimer/extend5" to="tasktimer" method="_on_extend5_pressed"]
[connection signal="pressed" from="tasktimer/end" to="." method="_on_end_pressed"]
[connection signal="timeout" from="breaktimer/timerb" to="." method="_on_timerb_timeout"]
[connection signal="pressed" from="breaktimer/extend5b" to="breaktimer" method="_on_extend5b_pressed"]
[connection signal="pressed" from="breaktimer/endb" to="." method="_on_endb_pressed"]
